# LLM-Knowledge-Bases

./: .gitignore  README.md  pyproject.toml
data/raw/: rag-retrieval-augmented-generation.md
data/wiki/: INDEX.md  query-rag是什么.md  rag-retrieval-augmented-generation.md  vector-databases.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: api.ts  main.ts  state.ts  styles.css  types.ts
frontend/src/components/: content.ts  modal.ts  sidebar.ts
kb_agent/: cli.py  core.py  llm.py  web.py
kb_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
raw/: transformer-architecture.md  vector-databases.md
templates/: index.html
wiki/: INDEX.md  query-rag是什么.md  transformer-architecture.md
